// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateHeaders() spec is present header is not present spec defines it as required returns validation error 1`] = `
Array [
  Object {
    "message": "Missing aHeader header param",
    "name": "required",
    "path": Array [
      "header",
      "aHeader",
    ],
    "severity": "error",
    "summary": "",
  },
]
`;

exports[`validateHeaders() spec is present header is present deprecated flag is set returns deprecation warning 1`] = `
Array [
  Object {
    "message": "Header param x-test-header is deprecated",
    "name": "deprecated",
    "path": Array [
      "header",
      "x-test-header",
    ],
    "severity": "warn",
    "summary": "",
  },
]
`;

exports[`validateHeaders() spec is present header is present explode flag is set header is invalid not validates 1`] = `
Array [
  Object {
    "message": "should be number",
    "name": "type",
    "path": Array [
      "header",
    ],
    "severity": "error",
    "summary": "should be number",
  },
]
`;

exports[`validateHeaders() spec is present header is present explode flag is set schema type is incorrect throws error 1`] = `"Explode can be only applied to header of object type"`;

exports[`validateHeaders() spec is present header is present mediaType is provided specific mediaType found in spec content list validates against more specific spec 1`] = `
Array [
  Object {
    "message": "should be number",
    "name": "type",
    "path": Array [
      "header",
    ],
    "severity": "error",
    "summary": "should be number",
  },
]
`;

exports[`validateHeaders() spec is present header is present mediaType is provided specific mediaType not found in spec content list validates against default spec 1`] = `Array []`;

exports[`validateHeaders() spec is present header is present schema is present header is not valid not validates against schema 1`] = `
Array [
  Object {
    "message": "should be number",
    "name": "type",
    "path": Array [
      "header",
    ],
    "severity": "error",
    "summary": "should be number",
  },
]
`;
